// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`info text should match snapshot for error At least 50% of the vault must be in DFI when taking a loan 1`] = `
Array [
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 20,
        },
        Array [
          undefined,
          Object {
            "color": "rgba(255, 0, 0, 1)",
          },
        ],
        Object {
          "fontFamily": "material",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>,
  <RCTScrollView
    contentContainerStyle={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
    horizontal={true}
    showsHorizontalScrollIndicator={false}
    style={
      Array [
        Object {
          "marginLeft": 12,
          "marginRight": 12,
        },
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
        },
      ]
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Error Code: 4
      </Text>
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Insufficient DFI collateral (≥50%)
      </Text>
    </View>
  </RCTScrollView>,
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "rgba(212, 212, 212, 1)",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(212, 212, 212, 1)",
        "borderLeftWidth": 1,
        "borderRightColor": "rgba(212, 212, 212, 1)",
        "borderRightWidth": 1,
        "borderTopColor": "rgba(212, 212, 212, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": 12,
        "opacity": 1,
        "paddingBottom": 4,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 4,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "RegularFont",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          Array [
            Object {
              "fontSize": 14,
              "lineHeight": 20,
            },
            Object {
              "color": "rgba(255, 0, 175, 1)",
              "fontFamily": "MediumFont",
              "fontWeight": "500",
            },
          ],
        ]
      }
    >
      OK
    </Text>
  </View>,
]
`;

exports[`info text should match snapshot for error Cannot payback loan while any of the asset's price is invalid 1`] = `
Array [
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 20,
        },
        Array [
          undefined,
          Object {
            "color": "rgba(255, 0, 0, 1)",
          },
        ],
        Object {
          "fontFamily": "material",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>,
  <RCTScrollView
    contentContainerStyle={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
    horizontal={true}
    showsHorizontalScrollIndicator={false}
    style={
      Array [
        Object {
          "marginLeft": 12,
          "marginRight": 12,
        },
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
        },
      ]
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Error Code: 6
      </Text>
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Cannot payback loan due to invalid price
      </Text>
    </View>
  </RCTScrollView>,
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "rgba(212, 212, 212, 1)",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(212, 212, 212, 1)",
        "borderLeftWidth": 1,
        "borderRightColor": "rgba(212, 212, 212, 1)",
        "borderRightWidth": 1,
        "borderTopColor": "rgba(212, 212, 212, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": 12,
        "opacity": 1,
        "paddingBottom": 4,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 4,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "RegularFont",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          Array [
            Object {
              "fontSize": 14,
              "lineHeight": 20,
            },
            Object {
              "color": "rgba(255, 0, 175, 1)",
              "fontFamily": "MediumFont",
              "fontWeight": "500",
            },
          ],
        ]
      }
    >
      OK
    </Text>
  </View>,
]
`;

exports[`info text should match snapshot for error Error: Not found, code: 404, message: Page not found 1`] = `
Array [
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 20,
        },
        Array [
          undefined,
          Object {
            "color": "rgba(255, 0, 0, 1)",
          },
        ],
        Object {
          "fontFamily": "material",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>,
  <RCTScrollView
    contentContainerStyle={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
    horizontal={true}
    showsHorizontalScrollIndicator={false}
    style={
      Array [
        Object {
          "marginLeft": 12,
          "marginRight": 12,
        },
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
        },
      ]
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Error Code: 0
      </Text>
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        404, message Page not found
      </Text>
    </View>
  </RCTScrollView>,
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "rgba(212, 212, 212, 1)",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(212, 212, 212, 1)",
        "borderLeftWidth": 1,
        "borderRightColor": "rgba(212, 212, 212, 1)",
        "borderRightWidth": 1,
        "borderTopColor": "rgba(212, 212, 212, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": 12,
        "opacity": 1,
        "paddingBottom": 4,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 4,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "RegularFont",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          Array [
            Object {
              "fontSize": 14,
              "lineHeight": 20,
            },
            Object {
              "color": "rgba(255, 0, 175, 1)",
              "fontFamily": "MediumFont",
              "fontWeight": "500",
            },
          ],
        ]
      }
    >
      OK
    </Text>
  </View>,
]
`;

exports[`info text should match snapshot for error Lack of liquidity 1`] = `
Array [
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 20,
        },
        Array [
          undefined,
          Object {
            "color": "rgba(255, 0, 0, 1)",
          },
        ],
        Object {
          "fontFamily": "material",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>,
  <RCTScrollView
    contentContainerStyle={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
    horizontal={true}
    showsHorizontalScrollIndicator={false}
    style={
      Array [
        Object {
          "marginLeft": 12,
          "marginRight": 12,
        },
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
        },
      ]
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Error Code: 5
      </Text>
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Pool does not have enough liquidity
      </Text>
    </View>
  </RCTScrollView>,
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "rgba(212, 212, 212, 1)",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(212, 212, 212, 1)",
        "borderLeftWidth": 1,
        "borderRightColor": "rgba(212, 212, 212, 1)",
        "borderRightWidth": 1,
        "borderTopColor": "rgba(212, 212, 212, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": 12,
        "opacity": 1,
        "paddingBottom": 4,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 4,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "RegularFont",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          Array [
            Object {
              "fontSize": 14,
              "lineHeight": 20,
            },
            Object {
              "color": "rgba(255, 0, 175, 1)",
              "fontFamily": "MediumFont",
              "fontWeight": "500",
            },
          ],
        ]
      }
    >
      OK
    </Text>
  </View>,
]
`;

exports[`info text should match snapshot for error No live fixed prices 1`] = `
Array [
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 20,
        },
        Array [
          undefined,
          Object {
            "color": "rgba(255, 0, 0, 1)",
          },
        ],
        Object {
          "fontFamily": "material",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>,
  <RCTScrollView
    contentContainerStyle={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
    horizontal={true}
    showsHorizontalScrollIndicator={false}
    style={
      Array [
        Object {
          "marginLeft": 12,
          "marginRight": 12,
        },
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
        },
      ]
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Error Code: 7
      </Text>
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        No live fixed prices for loan token
      </Text>
    </View>
  </RCTScrollView>,
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "rgba(212, 212, 212, 1)",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(212, 212, 212, 1)",
        "borderLeftWidth": 1,
        "borderRightColor": "rgba(212, 212, 212, 1)",
        "borderRightWidth": 1,
        "borderTopColor": "rgba(212, 212, 212, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": 12,
        "opacity": 1,
        "paddingBottom": 4,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 4,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "RegularFont",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          Array [
            Object {
              "fontSize": 14,
              "lineHeight": 20,
            },
            Object {
              "color": "rgba(255, 0, 175, 1)",
              "fontFamily": "MediumFont",
              "fontWeight": "500",
            },
          ],
        ]
      }
    >
      OK
    </Text>
  </View>,
]
`;

exports[`info text should match snapshot for error Price is higher than indicated. 1`] = `
Array [
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 20,
        },
        Array [
          undefined,
          Object {
            "color": "rgba(255, 0, 0, 1)",
          },
        ],
        Object {
          "fontFamily": "material",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>,
  <RCTScrollView
    contentContainerStyle={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
    horizontal={true}
    showsHorizontalScrollIndicator={false}
    style={
      Array [
        Object {
          "marginLeft": 12,
          "marginRight": 12,
        },
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
        },
      ]
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Error Code: 3
      </Text>
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Price is higher than indicated
      </Text>
    </View>
  </RCTScrollView>,
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "rgba(212, 212, 212, 1)",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(212, 212, 212, 1)",
        "borderLeftWidth": 1,
        "borderRightColor": "rgba(212, 212, 212, 1)",
        "borderRightWidth": 1,
        "borderTopColor": "rgba(212, 212, 212, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": 12,
        "opacity": 1,
        "paddingBottom": 4,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 4,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "RegularFont",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          Array [
            Object {
              "fontSize": 14,
              "lineHeight": 20,
            },
            Object {
              "color": "rgba(255, 0, 175, 1)",
              "fontFamily": "MediumFont",
              "fontWeight": "500",
            },
          ],
        ]
      }
    >
      OK
    </Text>
  </View>,
]
`;

exports[`info text should match snapshot for error UnknownError 1`] = `
Array [
  <Text />,
  <RCTScrollView
    contentContainerStyle={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
    horizontal={true}
    showsHorizontalScrollIndicator={false}
    style={
      Array [
        Object {
          "marginLeft": 12,
          "marginRight": 12,
        },
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
        },
      ]
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Error Code: 0
      </Text>
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        UnknownError
      </Text>
    </View>
  </RCTScrollView>,
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "rgba(212, 212, 212, 1)",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(212, 212, 212, 1)",
        "borderLeftWidth": 1,
        "borderRightColor": "rgba(212, 212, 212, 1)",
        "borderRightWidth": 1,
        "borderTopColor": "rgba(212, 212, 212, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": 12,
        "opacity": 1,
        "paddingBottom": 4,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 4,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "RegularFont",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          Array [
            Object {
              "fontSize": 14,
              "lineHeight": 20,
            },
            Object {
              "color": "rgba(255, 0, 175, 1)",
              "fontFamily": "MediumFont",
              "fontWeight": "500",
            },
          ],
        ]
      }
    >
      OK
    </Text>
  </View>,
]
`;

exports[`info text should match snapshot for error Vault does not have enough collateralization ratio defined by loan scheme 1`] = `
Array [
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 20,
        },
        Array [
          undefined,
          Object {
            "color": "rgba(255, 0, 0, 1)",
          },
        ],
        Object {
          "fontFamily": "material",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>,
  <RCTScrollView
    contentContainerStyle={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
    horizontal={true}
    showsHorizontalScrollIndicator={false}
    style={
      Array [
        Object {
          "marginLeft": 12,
          "marginRight": 12,
        },
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
        },
      ]
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Error Code: 8
      </Text>
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Vault does not have enough col. ratio
      </Text>
    </View>
  </RCTScrollView>,
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "rgba(212, 212, 212, 1)",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(212, 212, 212, 1)",
        "borderLeftWidth": 1,
        "borderRightColor": "rgba(212, 212, 212, 1)",
        "borderRightWidth": 1,
        "borderTopColor": "rgba(212, 212, 212, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": 12,
        "opacity": 1,
        "paddingBottom": 4,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 4,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "RegularFont",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          Array [
            Object {
              "fontSize": 14,
              "lineHeight": 20,
            },
            Object {
              "color": "rgba(255, 0, 175, 1)",
              "fontFamily": "MediumFont",
              "fontWeight": "500",
            },
          ],
        ]
      }
    >
      OK
    </Text>
  </View>,
]
`;

exports[`info text should match snapshot for error amount is less than 1`] = `
Array [
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 20,
        },
        Array [
          undefined,
          Object {
            "color": "rgba(255, 0, 0, 1)",
          },
        ],
        Object {
          "fontFamily": "material",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>,
  <RCTScrollView
    contentContainerStyle={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
    horizontal={true}
    showsHorizontalScrollIndicator={false}
    style={
      Array [
        Object {
          "marginLeft": 12,
          "marginRight": 12,
        },
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
        },
      ]
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Error Code: 2
      </Text>
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Not enough balance
      </Text>
    </View>
  </RCTScrollView>,
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "rgba(212, 212, 212, 1)",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(212, 212, 212, 1)",
        "borderLeftWidth": 1,
        "borderRightColor": "rgba(212, 212, 212, 1)",
        "borderRightWidth": 1,
        "borderTopColor": "rgba(212, 212, 212, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": 12,
        "opacity": 1,
        "paddingBottom": 4,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 4,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "RegularFont",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          Array [
            Object {
              "fontSize": 14,
              "lineHeight": 20,
            },
            Object {
              "color": "rgba(255, 0, 175, 1)",
              "fontFamily": "MediumFont",
              "fontWeight": "500",
            },
          ],
        ]
      }
    >
      OK
    </Text>
  </View>,
]
`;

exports[`info text should match snapshot for error no prevouts available to create a transaction 1`] = `
Array [
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 20,
        },
        Array [
          undefined,
          Object {
            "color": "rgba(255, 0, 0, 1)",
          },
        ],
        Object {
          "fontFamily": "material",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>,
  <RCTScrollView
    contentContainerStyle={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
    horizontal={true}
    showsHorizontalScrollIndicator={false}
    style={
      Array [
        Object {
          "marginLeft": 12,
          "marginRight": 12,
        },
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
        },
      ]
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Error Code: 1
      </Text>
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Insufficient UTXO DFI
      </Text>
    </View>
  </RCTScrollView>,
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "rgba(212, 212, 212, 1)",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(212, 212, 212, 1)",
        "borderLeftWidth": 1,
        "borderRightColor": "rgba(212, 212, 212, 1)",
        "borderRightWidth": 1,
        "borderTopColor": "rgba(212, 212, 212, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": 12,
        "opacity": 1,
        "paddingBottom": 4,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 4,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "RegularFont",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          Array [
            Object {
              "fontSize": 14,
              "lineHeight": 20,
            },
            Object {
              "color": "rgba(255, 0, 175, 1)",
              "fontFamily": "MediumFont",
              "fontWeight": "500",
            },
          ],
        ]
      }
    >
      OK
    </Text>
  </View>,
]
`;

exports[`info text should match snapshot for error not enough balance after combing all prevouts 1`] = `
Array [
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 20,
        },
        Array [
          undefined,
          Object {
            "color": "rgba(255, 0, 0, 1)",
          },
        ],
        Object {
          "fontFamily": "material",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>,
  <RCTScrollView
    contentContainerStyle={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
    horizontal={true}
    showsHorizontalScrollIndicator={false}
    style={
      Array [
        Object {
          "marginLeft": 12,
          "marginRight": 12,
        },
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
        },
      ]
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Error Code: 1
      </Text>
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "BoldFont",
                "fontSize": 14,
                "fontWeight": "700",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Insufficient UTXO DFI
      </Text>
    </View>
  </RCTScrollView>,
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "rgba(212, 212, 212, 1)",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(212, 212, 212, 1)",
        "borderLeftWidth": 1,
        "borderRightColor": "rgba(212, 212, 212, 1)",
        "borderRightWidth": 1,
        "borderTopColor": "rgba(212, 212, 212, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": 12,
        "opacity": 1,
        "paddingBottom": 4,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 4,
      }
    }
    testID="oceanInterface_close"
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "RegularFont",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          Array [
            Object {
              "fontSize": 14,
              "lineHeight": 20,
            },
            Object {
              "color": "rgba(255, 0, 175, 1)",
              "fontFamily": "MediumFont",
              "fontWeight": "500",
            },
          ],
        ]
      }
    >
      OK
    </Text>
  </View>,
]
`;
